# ad-library-data-pipeline-and-enrichment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_local_pipeline.py
.github/workflows/: ci.yml
dags/: pipeline_dag.py
data/bronze/: ads_raw_20250730_121502.jsonl
data/gold/: ads_enriched_20250730_121506.jsonl  top10_ads_20250730_121510.csv
data/silver/: ads_normalized_20250730_121504.jsonl
scripts/: cleanup_stuck_tasks.py  start_airflow.sh
src/: __init__.py
src/enrich/: __init__.py  enrich_ads.py
src/extract/: __init__.py  fetch_ads.py
src/extract/modes/: __init__.py  api_mode.py  mock_mode.py
src/normalize/: __init__.py  normalize_ads.py
src/rank/: __init__.py  rank_ads.py
src/schemas/: ads.py
src/utils/: enricher.py  json_encoder.py  logger.py  ranker.py
tests/: conftest.py  test_enricher.py  test_extract.py  test_logger.py  test_pipeline.py  test_ranker.py  test_schemas.py
